# Python-Workshop-Project

./: .gitignore  README.md  pyproject.toml
Visualization/: Python_workshop_visualization.ipynb
analysis/: Stage_0_Get_main_variables.py  Stage_1_Process_trials.py  Stage_3_Concat_all_trials.py  Stage_4_Create_surrogate_data.py  Stage_5_Run_permutation_test.py  Stage_6_Main_analysis.py  run_for_all_patients.py  tests_for_all_functions.py
dfs from results/: create_dfs_from_results.py
src/: config.py  logger.py  main.py
src/analysis/: run_for_all_patients.py  s1_get_main_variables.py  s3_compute_mean_power.py  s6_run_permutation_test.py  s7_main_analysis.py
src/df_for_visualization/: convert_mat_results_to_df.py
src/visualization/: power_modulations_hg_lg_beta_alpha_theta_delta.ipynb  power_modulations_within_and_outside_fpn.ipynb
tests/: tests_for_all_functions.py
visualization/: power_modulations_HG_LG_Beta_Alpha_Theta_Delta.ipynb  power_modulations_hg_lg_beta_alpha_theta_delta.py  power_modulations_within_and_outside_fpn.py
